syntax = "proto3";
import "CompareAndSwap.proto";

service PaxosLearnerService {
	rpc LearnCommand (LearnCommandReq) returns (LearnCommandResp);
	rpc AckLearnCommand (LearnCommandResp) returns (LearnCommandResp);
}

message LearnCommandReq {
	CompareAndSwapReq value = 1;
	uint32 leaderNumber = 2;
	uint32 paxosInstance = 3;
	string sender = 4;
}

message LearnCommandResp {

}